force-app/main/default/objects/Legal_Custody__c/Legal_Custody__c.object-meta.xml
<CustomObject>
    <label>Legal Custody</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Legal Custody Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Custodys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>