force-app/main/default/objects/Legal_Custody__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Custodian</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Custodys</relationshipLabel>
    <relationshipName>Legal_Custodys</relationshipName>
    <type>Lookup</type>
</CustomField>