force-app/main/default/objects/Legal_Custody__c/fields/Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Custodys (Child Name)</relationshipLabel>
    <relationshipName>Legal_Custodys1</relationshipName>
    <type>Lookup</type>
</CustomField>