force-app/main/default/objects/Legal_Custody__c/fields/Legal_Custody__c.field-meta.xml
<CustomField>
    <fullName>Legal_Custody__c</fullName>
    <label>Legal Custody</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caretaker (Non Relative) Custody</fullName>
            </value>
            <value>
                <fullName>Caretaker (Non Relative) Custody and Guardianship</fullName>
            </value>
            <value>
                <fullName>Caretaker Guardianship</fullName>
            </value>
            <value>
                <fullName>Co-Committed</fullName>
            </value>
            <value>
                <fullName>Committed to DSS</fullName>
            </value>
            <value>
                <fullName>Custody to Father</fullName>
            </value>
            <value>
                <fullName>Custody to Mother</fullName>
            </value>
            <value>
                <fullName>Custody to Non-Relative</fullName>
            </value>
            <value>
                <fullName>Custody to Relative</fullName>
            </value>
            <value>
                <fullName>Delinquent - Committed to DSS and DJJ</fullName>
            </value>
            <value>
                <fullName>Guardianship to DSS</fullName>
            </value>
            <value>
                <fullName>Shelter Care Order to DSS</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Agreement to Caregiver</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Agreement to DSS</fullName>
            </value>
            <value>
                <fullName>Child Emancipated via marriage or court order</fullName>
                <isActive>false</isActive>
                <label>Child Emancipated via marriage or court order</label>
            </value>
            <value>
                <fullName>Co-Committed to DSS and DDA</fullName>
                <isActive>false</isActive>
                <label>Co-Committed to DSS and DDA</label>
            </value>
            <value>
                <fullName>Co-Committed to DSS and DHMH</fullName>
                <isActive>false</isActive>
                <label>Co-Committed to DSS and DHMH</label>
            </value>
            <value>
                <fullName>Co-Committed to DSS and DJS</fullName>
                <isActive>false</isActive>
                <label>Co-Committed to DSS and DJS</label>
            </value>
            <value>
                <fullName>Co-Committed to DSS, DJS, and DHMH</fullName>
                <isActive>false</isActive>
                <label>Co-Committed to DSS, DJS, and DHMH</label>
            </value>
            <value>
                <fullName>Committed to Another State Agency</fullName>
                <isActive>false</isActive>
                <label>Committed to Another State Agency</label>
            </value>
            <value>
                <fullName>Committed to DDA</fullName>
                <isActive>false</isActive>
                <label>Committed to DDA</label>
            </value>
            <value>
                <fullName>Committed to DHMH</fullName>
                <isActive>false</isActive>
                <label>Committed to DHMH</label>
            </value>
            <value>
                <fullName>Committed to DJS</fullName>
                <isActive>false</isActive>
                <label>Committed to DJS</label>
            </value>
            <value>
                <fullName>Custody and Guardianship to Relative</fullName>
                <isActive>false</isActive>
                <label>Custody and Guardianship to Relative</label>
            </value>
            <value>
                <fullName>DJJ and DHMH</fullName>
                <isActive>false</isActive>
                <label>DJJ and DHMH</label>
            </value>
            <value>
                <fullName>Delinquent - Committed to DJJ</fullName>
                <isActive>false</isActive>
                <label>Delinquent - Committed to DJJ</label>
            </value>
            <value>
                <fullName>Final Decree of Adoption</fullName>
                <isActive>false</isActive>
                <label>Final Decree of Adoption</label>
            </value>
            <value>
                <fullName>Order of Protective Supervision</fullName>
                <isActive>false</isActive>
                <label>Order of Protective Supervision</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Parental Custody</fullName>
                <isActive>false</isActive>
                <label>Parental Custody</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>