force-app/main/default/objects/Legal_Custody__c/validationRules/Legal_Custodian_must_be_a_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Custodian_must_be_a_required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(ISBLANK( Child__c) ,  OR(ISPICKVAL(Legal_Custody__c ,&apos;Custody to Father&apos;),ISPICKVAL(Legal_Custody__c ,&apos;Custody to Mother&apos;)) ) ,true,false)</errorConditionFormula>
    <errorMessage>Legal Custodian must be a required</errorMessage>
</ValidationRule>